# my_graduation_research

./: README.md
akira_recog_obj/: CMakeLists.txt  CMakeLists.txt~  akira_recog_obj.xml  package.xml
akira_recog_obj/data/data1/: angle.txt  bottom_diameter.txt  depth.txt  height.txt  name.txt  size.txt  up_diameter.txt
akira_recog_obj/include/: akira_recog_obj.h
akira_recog_obj/include/akira_recog_obj/: akira_clustering_clouds.h  akira_clustering_clouds.h~  akira_detect_table.h  akira_detect_table.h~  akira_recog_obj.h  akira_recog_obj.h~  akira_table_filter.h  akira_table_filter.h~
akira_recog_obj/launch/: akira_estimating_objects.launch  akira_estimating_objects.launch~  akira_recog_obj.launch  akira_recog_obj.launch~  r200_nodelet_rgbd.launch  r200_nodelet_rgbd.launch~  slam_test.launch
akira_recog_obj/launch/includes/: depth.launch.xml  depth.launch.xml~  depth_registered.launch.xml  depth_registered.launch.xml~  processing.launch.xml  processing.launch.xml~
akira_recog_obj/src/: #akira_recog_obj.cpp#  akira_clustering_clouds.cpp  akira_clustering_clouds.cpp~  akira_detect_table.cpp  akira_detect_table.cpp~  akira_estimating_objects.cpp  akira_estimating_objects.cpp~  akira_filtering_clouds.cpp  akira_filtering_clouds.cpp~  akira_recog_obj.cpp  akira_recog_obj.cpp~  akira_tf_broadcaster.cpp  akira_tf_broadcaster.cpp~  akira_tf_listener.cpp  akira_tf_listener.cpp~  data_about_detected_object_pcl.txt  old_akira_recog_obj.cpp  old_akira_recog_obj.cpp~  output.txt  process_time_20171112.txt  program_memo.txt
(+774 files in other folders)
