<?xml version="1.0"?>
<package>
  <name>akira_recog_obj</name>
  <version>0.0.0</version>
  <description>The akira_recog_obj package</description>

  <maintainer email="fukuda@todo.todo">fukuda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- nodeletを定義している .xml ファイルを指定する -->
    <!-- <nodelet plugin="${prefix}/plugins/nodelet/akira_detect_table.xml" /> -->
    <!-- <nodelet plugin="${prefix}/plugins/nodelet/akira_clustering_clouds.xml" /> -->
    <nodelet plugin="${prefix}/plugins/nodelet/akira_recog_obj.xml" />
  </export>
</package>
